--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,33 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Phisher-Man: Phishing Service Made Modern!</h1>
+        <h1 class="title">
+            <img src="https://images.vexels.com/media/users/3/137597/isolated/svg/8f40c0b9230f0900c592b664292a4c80.svg" alt="Logo" style="width:80px; vertical-align:middle;">
+            Phisher-Man: Phishing Service Made Modern!
+        </h1>
         <h2>Select email format:</h2>
-        <div class="">
-            
+        <div class="container">
+            <div class="box">
+                <h3>Template</h3>
+                <p>Select a ready-made template from our library of Phishing email templates!</p>
+            </div>
+            <div class="box">
+                <h3>AI Generated</h3>
+                <p>Include optional details to generate a personalized Phishing email with minimal effort!</p>
+            </div>
+            <div class="box">
+                <h3>Custom</h3>
+                <p>Create your own Phishing email by writing your own body and subject line!</p>
+            </div>
+        </div>
+        <h1 class="faq-title">Frequently Asked Questions</h1>
+        <div class="faq-container">
+            <div class="faq">
+                <h3>hi</h3>
+            </div>
+            <div class="faq">
+                <h3>hi</h3>
+            </div>
         </div>
     </body>
 </html>
