basic layout done

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,35 @@
         <h1 class="faq-title">Frequently Asked Questions</h1>
         <div class="faq-container">
             <div class="faq">
-                <h3>hi</h3>
+                <h3>What is Phishing?</h3>
+                <p>&emsp;&emsp;Phishing is a form of social engineering that is most often used to steal or trick a user
+                    into revealing sensitive data. Sensitive data may include information such as passwords,
+                    bank details, or identifying information such as Social Security Numbers. In a corporate
+                    setting, this could mean revealing information important to a company, such as the emails,
+                    passwords, or other sensitive information of a company's owners, employees, or even users.
+                    <br>&emsp;&emsp;One of the most common phishing attack methods is through email, where attackers 
+                    will send users fake emails to trick them into opening their fake email and clicking on a link. Once
+                    the link has been clicked, the attacker can take several new avenues of attack, such as
+                    attempting to download malware on the victim's device or continuing the phishing attack by
+                    prompting the victim for sensitive information.
+                </p>
             </div>
             <div class="faq">
-                <h3>hi</h3>
+                <h3>What is a Phishing Simulator?</h3>
+                <p>&emsp;&emsp;A phishing simulator is a piece of software that simulates a real phishing attack in order
+                    to determine how vulnerable a group of people or, most commonly, a company's employees to
+                    certain types of phishing attacks. This software will send out fake phishing emails that do
+                    not contain any malicious links, but are designed to mimic the look and feel of real, malicious
+                    phishing emails in order to properly bait the receivers of the simulation and make them believe
+                    that the email is genuine. <br>&emsp;&emsp;If a user falls for the fake phishing attack, whether it be
+                    by clicking on a certain link, entering sensitive details into the simulation, or attempting to download
+                    random software, this failure is documented by the phishing simulator software and sent to the user
+                    of the software which, in this case, would be the employer or manager of the simulation's receivers.
+                    <br>&emsp;&emsp;The user or sender of the emails generally is able to then view a report or a list
+                    of statistics that document the success rate of the receivers, which allows the sender to determine
+                    how important phishing awareness and implementation of countermeasures to phishing and social
+                    engineering is to their group or company.
+                </p>
             </div>
         </div>
     </body>
