--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            Phisher-Man: Phishing Service Made Modern!
-        </title>
+        <title>Phisher-Man: Phishing Service Made Modern!</title>
+        <link rel="icon" type="image/svg" href="https://images.vexels.com/media/users/3/137597/isolated/svg/8f40c0b9230f0900c592b664292a4c80.svg">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
