custom page complete

--- a/public/custom.html
+++ b/public/custom.html
@@ -11,5 +11,14 @@
             <img src="https://www.freepnglogos.com/uploads/email-logo-png-27.png" alt="" style="width:80px; vertical-align:middle;">
             Phisher-Man: Custom Email
         </h1>
+        <div class="email-text-inputting">
+            <label for="subject">Subject:</label><br>
+            <textarea id="subject" placeholder="Write your subject..."></textarea>
+
+            <label for="body">Body:</label><br>
+            <textarea id="body" placeholder="Write your body..."></textarea>
+
+            <button type="submit">Submit</button>
+        </div>
     </body>
 </html>
