all done except email entering

--- a/public/generated.html
+++ b/public/generated.html
@@ -6,10 +6,14 @@
         <link rel="icon" type="image/png" href="https://www.freepnglogos.com/uploads/email-logo-png-27.png">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="generatedbody">
         <h1 class="title">
             <img src="https://www.freepnglogos.com/uploads/email-logo-png-27.png" alt="" style="width:80px; vertical-align:middle;">
             Phisher-Man: AI Generated Email
         </h1>
+        <input type="text" placeholder="Enter details here...">
+        <div class="output-zone">
+            <textarea disabled id="output" placeholder="OpenAI Output..."></textarea>
+        </div>
     </body>
 </html>
