--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             </a>
             <a href="generated.html" class="box">
                 <h3>AI Generated</h3>
-                <p>Include optional details to generate a personalized Phishing email with minimal effort!</p>
+                <p>Include email details to generate a personalized Phishing email with minimal effort!</p>
             </a>
             <a href="custom.html" class="box">
                 <h3>Custom</h3>
