--- a/public/template.html
+++ b/public/template.html
@@ -11,5 +11,39 @@
             <img src="https://www.freepnglogos.com/uploads/email-logo-png-27.png" alt="" style="width:80px; vertical-align:middle;">
             Phisher-Man: Template Email
         </h1>
+        <div class="container">
+            <div class="box2">
+                <h3>Fake Password Reset</h3>
+                <p>
+                    &emsp;&emsp;A fake password reset email is a relatively common type of phishing email. These fake emails
+                    work by convincing the user that they accidently triggered a password reset on one of their
+                    accounts and must reset their password. Often times, more precise phishing attacks will ensure
+                    that the targeted user actually owns an account of the type specified in the email. This increases
+                    the likelihood the attacker has of the user actually falling for the scam and entering an old password
+                    in addition to a new password, granting the attacker the actual password of that account.
+                </p>
+            </div>
+            <div class="box2">
+                <h3>Fake Invoice</h3>
+                <p>
+                    &emsp;&emsp;A fake invoice is one of the most common phishing email types. These work about how
+                    one might expect. An attacker will send a user a fake invoice to pay for some item or service that
+                    does not actually exist. The user, if they respond, will either end up paying for these items/services,
+                    revealing sensitive information such as their payment information, or, in many cases, both. Fake invoices
+                    may be one of (if not the most) effective phishing scam formats out there.
+                </p>
+            </div>
+            <div class="box2">
+                <h3>Fake Compromised Account Notification</h3>
+                <p>
+                    &emsp;&emsp;A compromised account email is another common type of phishing email, as it is extremely
+                    effective. These work by informing the user that one of their accounts has been compromised and they
+                    are thus required to verify important account information immediately to protect their account. This
+                    is particularly effective because it creates a sense of urgency in the user, making them more likely
+                    to fall for this particular phishing scam. Naturally, once they "verify" their account details, said
+                    details are sent to the attacker and sending of the phishing email.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
