email entering page visuals complete

--- a/public/email-entering.html
+++ b/public/email-entering.html
@@ -7,6 +7,24 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
+        <h1 class="title">
+            <img src="https://www.freepnglogos.com/uploads/email-logo-png-27.png" alt="" style="width:80px; vertical-align:middle;">
+            Phisher-Man: Email Entering
+        </h1>
+        <div class="container">
+            <div class="box2">
+                <h3 class="title2">Recipient List</h3>
+                <form>
+                    <input type="email" placeholder="Enter email" required>
+                    <button type="submit">Add</button>
+                </form>
+                <h3>Emails:</h3>
+                <ul class="email-list">
+                    <li>example1@gmail.com</li>
+                    <li>example2@gmail.com</li>
+                    <li>example3@gmail.com</li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>
