feat(frontend): add interactive dashboard and API integration
- Create JavaScript API client (api.js)
- Make custom email form functional with company selection
- Add campaign dashboard with send functionality
- Display employees, templates, and campaigns
- Add success/error notifications
- Link pages together for better UX

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,9 @@
             Phisher-Man: Phishing Service Made Modern!
         </h1>
         <h2>Select email format:</h2>
+        <div style="text-align: center; margin-bottom: 20px;">
+            <a href="dashboard.html" style="background: #2196F3; color: white; padding: 12px 24px; border-radius: 4px; text-decoration: none; font-weight: 600;">View Dashboard</a>
+        </div>
         <div class="container">
             <a href="template.html" class="box">
                 <h3>Template</h3>
