fix custom page button, create functional email entering page

--- a/static/custom.html
+++ b/static/custom.html
@@ -6,6 +6,23 @@
     <title>Phisher-Man: Custom Email</title>
     <link rel="icon" type="image/png" href="https://www.freepnglogos.com/uploads/email-logo-png-27.png">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .email-text-inputting button {
+            height: 46px;
+            padding: 0 20px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            margin-top: 1px;
+        }
+
+        .email-text-inputting button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 
 <body>
@@ -51,4 +68,5 @@
         });
     </script>
 </body>
+
 </html>
