--- a/static/email_entering.html
+++ b/static/email_entering.html
@@ -6,6 +6,126 @@
     <title>Phisher-Man: Email Entering</title>
     <link rel="icon" type="image/png" href="https://www.freepnglogos.com/uploads/email-logo-png-27.png">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .email-text-inputting button {
+            height: 46px;
+            padding: 0 20px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            margin-top: 25px;
+        }
+
+        .email-text-inputting button:hover {
+            background-color: #0056b3;
+        }
+
+        body {
+            background-color: powderblue;
+            font-family: Arial;
+        }
+
+        .title {
+            text-align: center;
+            font-size: 50px;
+        }
+
+        .email-text-inputting {
+            width: 800px;
+            margin: 50px auto;
+            font-family: Arial;
+        }
+
+        .email-card {
+            background-color: white;
+            border: 2px solid black;
+            border-radius: 10px;
+            padding: 25px 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .email-section-title {
+            text-align: center;
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
+            display: block;
+            margin-top: 15px;
+        }
+
+        input[type="email"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 2px solid white;
+            border-radius: 8px;
+            box-sizing: border-box;
+        }
+
+        input[type="email"]:focus {
+            border-color: blue;
+            outline: none;
+        }
+
+        .email-add-row {
+            display: flex;
+            gap: 10px;
+            margin-top: 5px;
+        }
+
+        .email-add-row input {
+            flex: 1;
+        }
+
+        button {
+            margin-top: 10px;
+            background-color: lightblue;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
+            white-space: nowrap;
+        }
+
+        button:hover {
+            background-color: white;
+            color: black;
+        }
+
+        .email-list-container {
+            background-color: #f8f8ff;
+            border: 2px solid black;
+            border-radius: 10px;
+            padding: 15px 20px;
+            margin-top: 25px;
+        }
+
+        .email-list-container h3 {
+            margin-top: 0;
+        }
+
+        #email-list {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        #email-list li {
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            padding: 8px 10px;
+            margin-bottom: 6px;
+            font-size: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,6 +142,7 @@
         <div>
             <input type="email" id="multi-email" placeholder="recipient@example.com" />
             <button type="button" id="add-email-btn">Add</button>
+            <button id="clear-email-btn" type="button">Clear All</button>
         </div>
 
         <div class="email-list-container">
@@ -29,6 +150,38 @@
             <ul id="email-list"></ul>
         </div>
     </div>
+    <script>
+        const addBtn = document.getElementById("add-email-btn");
+        const clearBtn = document.getElementById("clear-email-btn");
+        const multiEmailInput = document.getElementById("multi-email");
+        const emailList = document.getElementById("email-list");
+
+        addBtn.addEventListener("click", () => {
+            const email = multiEmailInput.value.trim();
+
+            if (email === "") return;
+
+            const li = document.createElement("li");
+            li.textContent = email;
+
+            if (!multiEmailInput.checkValidity()) {
+                alert("Please enter a valid email address.");
+                return;
+            }
+            emailList.appendChild(li);
+
+            multiEmailInput.value = "";
+        });
+        clearBtn.addEventListener("click", () => {
+            emailList.innerHTML = "";
+        });
+        multiEmailInput.addEventListener("keydown", (event) => {
+            if (event.key === "Enter") {
+                event.preventDefault();
+                addBtn.click();
+            }
+        });
+    </script>
 </body>
 
 </html>
