fix(frontend): resolve UI spacing issues
- Fix View Dashboard button being covered by Select email format text
  - Increased margin-top to 80px and margin-bottom to 40px
  - Added display inline-block for better spacing

- Fix Email Templates header hitting table in dashboard
  - Removed margin-bottom from h2, moved spacing to list containers
  - Added margin-top: 24px and padding-top: 8px to list containers
  - Improved visual separation between headers and content

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -21,19 +21,20 @@
         }
         .section h2 {
             margin-top: 0;
-            margin-bottom: 20px;
+            margin-bottom: 0;
             color: #333;
             font-size: 1.75em;
-            padding-bottom: 12px;
+            padding-bottom: 16px;
             border-bottom: 2px solid #e0e0e0;
         }
         #campaigns-list, #templates-list, #employees-list {
-            margin-top: 8px;
+            margin-top: 24px;
+            padding-top: 8px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 8px;
+            margin-top: 0;
         }
         th, td {
             padding: 12px;
