--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
             Phisher-Man: Phishing Service Made Modern!
         </h1>
         <h2>Select email format:</h2>
-        <div style="text-align: center; margin-bottom: 20px;">
-            <a href="dashboard.html" style="background: #2196F3; color: white; padding: 12px 24px; border-radius: 4px; text-decoration: none; font-weight: 600;">View Dashboard</a>
+        <div style="text-align: center; margin-top: 80px; margin-bottom: 40px;">
+            <a href="dashboard.html" style="background: #2196F3; color: white; padding: 12px 24px; border-radius: 4px; text-decoration: none; font-weight: 600; display: inline-block;">View Dashboard</a>
         </div>
         <div class="container">
             <a href="template.html" class="box">
