--- a/static/companies.html
+++ b/static/companies.html
@@ -38,24 +38,36 @@
             font-weight: 600;
         }
         .btn {
-            padding: 8px 16px;
+            padding: 10px 20px;
             background: rgb(44, 117, 177);
             color: white;
-            border: none;
-            border-radius: 4px;
+            border: 2px solid rgb(44, 117, 177);
+            border-radius: 6px;
             cursor: pointer;
             margin-right: 8px;
             font-size: 14px;
+            font-weight: 600;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s ease;
+            display: inline-block;
         }
         .btn:hover {
-            background: white;
-            color: black;
+            background: rgb(33, 88, 133);
+            border-color: rgb(33, 88, 133);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transform: translateY(-1px);
+        }
+        .btn:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
         .btn-danger {
             background: #f44336;
+            border-color: #f44336;
         }
         .btn-danger:hover {
             background: #da190b;
+            border-color: #da190b;
         }
         .nav-links {
             margin-bottom: 20px;
