--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -46,22 +46,36 @@
             font-weight: 600;
         }
         .btn {
-            padding: 8px 16px;
+            padding: 10px 20px;
             background: #4CAF50;
             color: white;
-            border: none;
-            border-radius: 4px;
+            border: 2px solid #4CAF50;
+            border-radius: 6px;
             cursor: pointer;
             margin-right: 8px;
+            font-weight: 600;
+            font-size: 14px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s ease;
+            display: inline-block;
         }
         .btn:hover {
             background: #45a049;
+            border-color: #45a049;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transform: translateY(-1px);
+        }
+        .btn:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
         .btn-danger {
             background: #f44336;
+            border-color: #f44336;
         }
         .btn-danger:hover {
             background: #da190b;
+            border-color: #da190b;
         }
         .status-badge {
             padding: 4px 8px;
@@ -94,6 +108,9 @@
     <div class="dashboard-container">
         <div class="nav-links">
             <a href="index.html">← Home</a>
+            <a href="employees.html">Manage Employees</a>
+            <a href="companies.html">Manage Companies</a>
+            <a href="campaigns.html">Manage Campaigns</a>
             <a href="custom.html">Create Template</a>
         </div>
 
