--- a/static/generated.html
+++ b/static/generated.html
@@ -69,19 +69,32 @@
             padding: 12px 24px;
             background: rgb(44, 117, 177);
             color: white;
-            border: none;
+            border: 2px solid rgb(44, 117, 177);
             border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
+            font-weight: 600;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s ease;
+            display: inline-block;
         }
         .btn:hover {
-            background: white;
-            color: black;
-            border: 2px solid rgb(44, 117, 177);
+            background: rgb(33, 88, 133);
+            border-color: rgb(33, 88, 133);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transform: translateY(-1px);
+        }
+        .btn:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
         .btn:disabled {
             background: #ccc;
+            border-color: #ccc;
             cursor: not-allowed;
+            opacity: 0.6;
+            transform: none;
+            box-shadow: none;
         }
         .generated-output {
             background: #f5f5f5;
