--- a/static/template.html
+++ b/static/template.html
@@ -73,27 +73,36 @@
             gap: 10px;
         }
         .btn {
-            padding: 8px 16px;
+            padding: 10px 20px;
             background: rgb(44, 117, 177);
             color: white;
-            border: none;
-            border-radius: 4px;
+            border: 2px solid rgb(44, 117, 177);
+            border-radius: 6px;
             cursor: pointer;
             font-size: 14px;
+            font-weight: 600;
             flex: 1;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s ease;
+            display: inline-block;
         }
         .btn:hover {
-            background: white;
-            color: black;
-            border: 2px solid rgb(44, 117, 177);
+            background: rgb(33, 88, 133);
+            border-color: rgb(33, 88, 133);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transform: translateY(-1px);
+        }
+        .btn:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
         .btn-secondary {
             background: #666;
+            border-color: #666;
         }
         .btn-secondary:hover {
-            background: white;
-            color: #666;
-            border: 2px solid #666;
+            background: #555;
+            border-color: #555;
         }
         .modal {
             display: none;
