landing page link, removal of generated button

--- a/public/template.html
+++ b/public/template.html
@@ -117,8 +117,7 @@
                     message: `
                         <h1>Password Reset Link</h1>
                         <p>
-                            Please visit this link to reset your password for your Microsoft account.<br><br>
-                            Here is the link: www.fake.com<br><br>
+                            Please visit <a href="http://localhost:3000/landing.html">this link</a> to reset your password for your Microsoft account.<br><br>
                             If you didn't request a password reset, you may safely ignore this email.<br><br>
                             Thanks,<br><br>
                             The Microsoft Account Team
@@ -139,7 +138,7 @@
                         <p>
                             Hi,<br><br>
                             Thank you for working with us. Your bill for $189.58 has been sent to your mailing address.<br><br>
-                            If you have already paid online, or would like to pay online, please visit www.fake.com to confirm your payment.<br><br>
+                            If you have already paid online, or would like to pay online, please visit <a href="http://localhost:3000/landing.html">our website</a> to confirm your payment.<br><br>
                             If you have any questions or would like to arrange any alternative payment methods then do not hesitate to get in touch.<br><br>
                             Our contact information can be found on the same link attached to this email.<br><br>
                             Thanks,<br><br>
@@ -164,7 +163,7 @@
                             When this occurs, we require you to reset your password via the link contained in this email.<br><br>
                             If someone else has access to your account, they have your current password and may be trying to access<br>
                             your personal information.<br><br>
-                            Please visit this link to change your password and protect your account's security: www.fake.com.<br><br>
+                            Please visit <a href="http://localhost:3000/landing.html">this link</a> to change your password and protect your account's security: www.fake.com.<br><br>
                             Thanks,<br><br>
                             The Microsoft Account Team
                         </p>
