feat(tracking): add click tracking finally works
regex link parsing + db storage for redirects
click rates might actually show up now lmao

--- a/static/analytics.html
+++ b/static/analytics.html
@@ -28,6 +28,10 @@
         <div id="analytics-content" style="display: none;">
             <h2 id="campaign-name">Campaign Analytics</h2>
 
+            <div style="background: #e3f2fd; border-left: 4px solid #2196F3; padding: 12px 16px; margin: 20px 0; border-radius: 4px; font-size: 14px;">
+                <strong>Note on Tracking:</strong> Email opens are tracked via invisible tracking pixels (1x1 images). Link clicks are tracked by wrapping all links with unique tracking URLs that redirect to the original destination. In real-world scenarios, many email clients block images by default which can underreport open rates, but click tracking is highly reliable since it requires direct user interaction.
+            </div>
+
             <div class="stats-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin: 30px 0;">
                 <div class="stat-card" style="background: #f8f9fa; padding: 20px; border-radius: 8px; text-align: center;">
                     <div style="font-size: 14px; color: #666; margin-bottom: 8px;">Total Sent</div>
